--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ contentdir = "content"
 layoutdir = "layouts"
 publishdir = "public"
 builddrafts = false
-baseurl = "https://jacquesfuentes.com"
+baseurl = "http://jacquesfuentes.com"
 canonifyurls = true
 pygmentsuseclasses = true
 
